# FastAPI_challenge

./: README.md  pyproject.toml  test.db
alembic/: env.py  script.py.mako
alembic/versions/: f3a0d4663713_initialization.py
appserver/: app.py  db.py
appserver/apps/account/: endpoints.py  models.py
appserver/apps/calendar/: models.py
appserver/libs/datetime/: calendar.py
tests/: test_hello.py
tests/apps/account/: test_endpoints.py
tests/libs/datetime/: test_calendar.py
